--- a/overlay-react/package.json
+++ b/overlay-react/package.json
@@ -17,8 +17,8 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "set \"BUILD_PATH=../build\" && react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "set \"BUILD_PATH=../build\" && react-scripts --openssl-legacy-provider build",
     "build2": "set \"BUILD_PATH=../build\"&& pre_build.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
